Сверстал header и блоки уведомлений, начал работу над первой секцией

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,17 @@
-<header class="header">
-  <div class="container"></div>
-</header>
+<div class="header__container">
+  <a href="#" class="header__logo">
+    <img src="img/logo.svg" alt="Aesop">
+  </a>
+  <nav class="header__nav nav">
+    <ul class="header__list list-reset">
+      <li class="header__item"><a href="#" class="header__link">Einkaufen</a></li>
+      <li class="header__item"><a href="#" class="header__link">Lesen</a></li>
+      <li class="header__item"><a href="#" class="header__link">Standorte</a></li>
+      <li class="header__item"><a href="#" class="header__link">Suchen</a></li>
+    </ul>
+  </nav>
+  <div class="header__links">
+    <a href="#" class="header__ref">Anmelden</a>
+    <a href="#" class="header__ref">Warenkorb</a>
+  </div>
+</div>
