--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -10,7 +10,7 @@ html {
 
 body {
   margin: 0;
-  font-family: "asd", sans-serif;
+  font-family: var(--font-family), sans-serif;
 }
 
 img {
@@ -44,8 +44,8 @@ a {
 
 .container {
   margin: 0 auto;
-  padding: 0 15px;
-  max-width: 1200px;
+  padding: 0 20px;
+  max-width: 1240px;
 }
 
 .js-focus-visible :focus:not(.focus-visible) {
