--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -3,4 +3,20 @@
 :root {
   --color-black: #000;
   --color-white: #fff;
+  --color-main: #fffef2;
+  --color-secondary: #252525;
+  --color-notice: #a6672b;
+  --color-swirl: #cfc7c0;
+
+  // fonts
+
+  --font-family: "Roboto";
+  --font-regular: 400 16px var(--font-family);
+
+  // offsets 
+
+  --small-offset: 10px;
+  --middle-offset: 15px;
+  --average-offset: 25px;
+  --big-offset: 35px;
 }
