--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,10 +2,12 @@
   <div class="header">
     @include('./header.html')
   </div>
-  <div class="main__container container">
-    <p class="main__text">Geb&auml;ndigt und geformt: Formulierungen mit Funktion</p>
-    <p class="main__descr">Mit Tame Hair Serum und Sculpt Hair Polish stellen wir zwei neue Formulierungen vor, die
-      dabei behilflich sind, die
-      Haare in&nbsp;Szene zu&nbsp;setzen, und gleichzeitig die Haarwurzeln sorgsam einbeziehen.</p>
+  <div class="main__container">
+    <div class="main__wrapper">
+      <p class="main__text">Geb&auml;ndigt und geformt: Formulierungen mit Funktion</p>
+      <p class="main__descr">Mit Tame Hair Serum und Sculpt Hair Polish stellen wir zwei neue Formulierungen vor, die
+        dabei behilflich sind, die
+        Haare in&nbsp;Szene zu&nbsp;setzen, und gleichzeitig die Haarwurzeln sorgsam einbeziehen.</p>
+    </div>
   </div>
 </section>
