--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -1,6 +1,5 @@
 .main {
   position: relative;
-  height: 450px;
 
   &::after {
     content: "";
@@ -12,12 +11,15 @@
     width: 100%;
     height: 100%;
     background-image: url("../img/1.png");
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
   }
 
-  &__container {
-    max-width: 400px;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 240px 0 100px 150px;
+    max-width: 600px;
   }
 
   &__text {
