--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,4 +8,4 @@
 @import "./components/header";
 @import "./components/notice";
 @import "./components/main";
-@import "./components/demonstration";
+@import "./components/demo";
