--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,14 @@
 @import "./components/notice";
 @import "./components/main";
 @import "./components/demo";
+@import "./components/carousel";
+@import "./components/info";
+@import "./components/quote";
+
+.title {
+  display: block;
+  margin: 0 0 var(--average-offset);
+  font: var(--font-regular);
+  font-size: 30px;
+  color: var(--color-secondary);
+}
