--- a/src/partials/demo.html
+++ b/src/partials/demo.html
@@ -6,7 +6,7 @@
       <div class="demo__wrapper">
         <img src="img/demo.png" alt="Sculpt Hair Polish" class="demo__img">
         <div>
-          <strong class="demo__title">Sculpt Hair Polish</strong>
+          <strong class="demo__title title">Sculpt Hair Polish</strong>
           <p class="demo__subtitle">Ein Gel, das Pr&auml;zision und Geschmeidigkeit vereint</p>
           <p class="demo__text">Das Sculpt Hair Polish ist ein Styling-Gel mit einzigartigem Halt. Fest und doch flexibel,
             das Resultat ist stets eine
