--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -11,6 +11,7 @@ html {
 body {
   margin: 0;
   font-family: var(--font-family), sans-serif;
+  background-color: var(--color-main);
 }
 
 img {
@@ -42,11 +43,11 @@ a {
   padding: 0;
 }
 
-.container {
-  margin: 0 auto;
-  padding: 0 20px;
-  max-width: 1240px;
-}
+// .container {
+//   margin: 0 auto;
+//   padding: 0 20px;
+//   max-width: 1400px;
+// }
 
 .js-focus-visible :focus:not(.focus-visible) {
   outline: none;
