--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,49 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="footer__container">
+    <div class="footer__mail">
+      <input type="text" class="footer__input" placeholder="E-Mail-Adresse">
+      <p class="footer__descr">Melden Sie sich hier&nbsp;an, um&nbsp;regelm&auml;&szlig;ig von Aesop zu&nbsp;h&ouml;ren.
+      </p>
+    </div>
+    <ul class="footer__list list-reset">
+      <li class="footer__subtitle">Ihre Bestellung</li>
+      <li class="footer__item footer__item--arrow"><a href="#" class="footer__link">Hilfe</a></li>
+      <li class="footer__item footer__item--arrow"><a href="#" class="footer__link">H&auml;ufig gestellte Fragen</a></li>
+      <li class="footer__item footer__item--arrow"><a href="#" class="footer__link">Versand und R&uuml;ckgaben</a></li>
+      <li class="footer__item footer__item--arrow"><a href="#" class="footer__link">Sendungsverfolgung</a></li>
+      <li class="footer__item"><a href="#" class="footer__link">Guthaben der Gutscheinkarte</a></li>
+      <li class="footer__item"><a href="#" class="footer__link">Impressum</a></li>
+    </ul>
+    <ul class="footer__list list-reset">
+      <li class="footer__subtitle">Services</li>
+      <li class="footer__item"><a href="#" class="footer__link">Firmengeschenkservice</a></li>
+    </ul>
+    <ul class="footer__list list-reset">
+      <li class="footer__subtitle">Einstellungen</li>
+      <li class="footer__item">Lieferung nach: <a href="#" class="footer__link">Deutschland</a></li>
+      <li class="footer__item">Sprache: <a href="#" class="footer__link">Deutsch</a></li>
+    </ul>
+    <div class="footer__info">
+      <strong class="footer__subtitle">Nachhaltigkeit</strong>
+      <p class="footer__descr">Alle Produkte von Aesop sind vegan und weder unsere Inhaltsstoffe noch unsere Produkte werden an&nbsp;Tieren getestet.
+      Unser Unternehmen ist mit dem Leaping Bunny Siegel ausgezeichnet und B-Corp zertifiziert.</p>
+    </div>
+    <ul class="footer__list list-reset">
+      <li class="footer__subtitle">&Uuml;ber</li>
+      <li class="footer__item"><a href="#" class="footer__link">Über Aesop</a></li>
+      <li class="footer__item"><a href="#" class="footer__link">Foundation</a></li>
+      <li class="footer__item"><a href="#" class="footer__link">Karriere</a></li>
+      <li class="footer__item"><a href="#" class="footer__link">Datenschutzrichtlinie</a></li>
+      <li class="footer__item"><a href="#" class="footer__link">Zugänglichkeit</a></li>
+    </ul>
+    <ul class="footer__list list-reset">
+      <li class="footer__subtitle">Social Media</li>
+      <li class="footer__item footer__item--arrow"><a href="#" class="footer__link">Instagram</a></li>
+      <li class="footer__item footer__item--arrow"><a href="#" class="footer__link">Twitter</a></li>
+      <li class="footer__item footer__item--arrow"><a href="#" class="footer__link">LinkedIn</a></li>
+    </ul>
+  </div>
+  <div class="footer__bottom">
+    <p class="footer__copyright">&copy;&nbsp;Aesop</p>
+  </div>
 </footer>
