--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./components/carousel";
 @import "./components/info";
 @import "./components/quote";
+@import "./components/footer";
 
 .title {
   display: block;
