Сделал адаптивность >= 320px

--- a/src/partials/demo.html
+++ b/src/partials/demo.html
@@ -5,7 +5,7 @@
       <a href="#" class="demo__link">Schließen</a>
       <div class="demo__wrapper">
         <img src="img/demo.png" alt="Sculpt Hair Polish" class="demo__img">
-        <div>
+        <div class="demo__inner">
           <strong class="demo__title title">Sculpt Hair Polish</strong>
           <p class="demo__subtitle">Ein Gel, das Pr&auml;zision und Geschmeidigkeit vereint</p>
           <p class="demo__text">Das Sculpt Hair Polish ist ein Styling-Gel mit einzigartigem Halt. Fest und doch flexibel,
