--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -19,4 +19,10 @@
   --middle-offset: 15px;
   --average-offset: 25px;
   --big-offset: 35px;
+
+  // burger 
+
+  --burger-width: 25px;
+  --burger-height: 20px;
+  --burger-line-height: 2px;
 }
