--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,4 +14,5 @@
     <a href="#" class="header__ref">Anmelden</a>
     <a href="#" class="header__ref">Warenkorb</a>
   </div>
+  <button class="header__burger"><span class="header__burger-line"></span></button>
 </div>
