--- a/src/partials/notice.html
+++ b/src/partials/notice.html
@@ -1,6 +1,8 @@
 <div class="notice @sub_class">
-  <p class="notice__text">@text</p>
-  @if (link === true) {
+  <p class="notice__text">@text
+    @if (link === true) {
     <a href="#" class="notice__link">@link_text</a>
-  }
+    }
+  </p>
+  
 </div>
