--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -1,8 +1,14 @@
+@import "../mixins";
+
 .carousel {
   padding: 100px 0;
 
   &__container {
     padding: 0 calc(var(--big-offset) * 2);
+
+    @include small-screen {
+      padding: 0 var(--small-offset);
+    }
   }
 
   &__slide {
