--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -1,18 +1,40 @@
+@import "../mixins";
+
 .main {
   position: relative;
+
+  &::before {
+    @include middle-screen {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: -1;
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-color: var(--color-black);
+      opacity: 0.7;
+    }
+  }
 
   &::after {
     content: "";
     position: absolute;
     left: 0;
     top: 0;
-    z-index: -1;
+    z-index: -2;
     display: block;
     width: 100%;
     height: 100%;
     background-image: url("../img/1.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
+
+    @include xlarge-screen {
+      background-position: 90% 0;
+      background-size: cover;
+    }
   }
 
   &__wrapper {
@@ -20,6 +42,23 @@
     flex-direction: column;
     padding: 240px 0 100px 150px;
     max-width: 600px;
+
+    @include xlarge-screen {
+      padding: 240px 0 100px 100px;
+    }
+
+    @include large-screen {
+      padding: 100px 0 100px 50px;
+      max-width: 400px;
+    }
+
+    @include middle-screen {
+      padding: 100px 0 200px 50px;
+    }
+
+    @include small-screen {
+      padding: 100px 25px 200px;
+    }
   }
 
   &__text {
