--- a/src/scss/mixins/_breakpoint.scss
+++ b/src/scss/mixins/_breakpoint.scss
@@ -1,17 +1,23 @@
-@mixin desktop {
-  @media (min-width: (1025px)) {
+@mixin xlarge-screen {
+  @media (max-width: (1200px)) {
     @content;
   }
 }
 
-@mixin tablet {
-  @media (max-width: (1024px)) {
+@mixin large-screen {
+  @media (max-width: (992px)) {
     @content;
   }
 }
 
-@mixin mobile {
+@mixin middle-screen {
   @media (max-width: (768px)) {
+    @content;
+  }
+}
+
+@mixin small-screen {
+  @media (max-width: (576px)) {
     @content;
   }
 }
