--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,17 +2,19 @@
   <a href="#" class="header__logo">
     <img src="img/logo.svg" alt="Aesop">
   </a>
-  <nav class="header__nav nav">
-    <ul class="header__list list-reset">
-      <li class="header__item"><a href="#" class="header__link">Einkaufen</a></li>
-      <li class="header__item"><a href="#" class="header__link">Lesen</a></li>
-      <li class="header__item"><a href="#" class="header__link">Standorte</a></li>
-      <li class="header__item"><a href="#" class="header__link">Suchen</a></li>
-    </ul>
-  </nav>
-  <div class="header__links">
-    <a href="#" class="header__ref">Anmelden</a>
-    <a href="#" class="header__ref">Warenkorb</a>
+  <div class="header__menu">
+    <nav class="header__nav nav">
+      <ul class="header__list list-reset">
+        <li class="header__item"><a href="#" class="header__link">Einkaufen</a></li>
+        <li class="header__item"><a href="#" class="header__link">Lesen</a></li>
+        <li class="header__item"><a href="#" class="header__link">Standorte</a></li>
+        <li class="header__item"><a href="#" class="header__link">Suchen</a></li>
+      </ul>
+    </nav>
+    <div class="header__links">
+      <a href="#" class="header__ref">Anmelden</a>
+      <a href="#" class="header__ref">Warenkorb</a>
+    </div>
   </div>
   <button class="header__burger"><span class="header__burger-line"></span></button>
 </div>
