--- a/src/partials/notice.html
+++ b/src/partials/notice.html
@@ -4,5 +4,12 @@
     <a href="#" class="notice__link">@link_text</a>
     }
   </p>
-  
+  @if (plus_icon === true) {
+  <a href="#" class="notice__plus">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="13px" height="13px">
+      <path fill-rule="evenodd"
+        d="M 11 2 L 11 11 L 2 11 L 2 13 L 11 13 L 11 22 L 13 22 L 13 13 L 22 13 L 22 11 L 13 11 L 13 2 Z" />
+    </svg>
+  </a>
+  }
 </div>
