--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -9,12 +9,61 @@
 
     @include middle-screen {
       justify-content: space-between;
+
+      // &--active {
+      //   padding: var(--average-offset) 50px;
+      // }
     }
+
+    // @include small-screen {
+    //   &--active {
+    //     padding: var(--average-offset);
+    //   }
+    // }
   }
 
   &__logo {
+    z-index: 6;
+
     img {
       display: block;
+    }
+  }
+
+  &__menu {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    @include middle-screen {
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: 5;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      overflow: auto;
+      padding: 125px 50px 75px;
+      width: 100vw;
+      height: 100vh;
+      background-color: var(--color-secondary);
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s linear, visibility 0.3s linear;
+      pointer-events: none;
+
+      &--active {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: all;
+      }
+    }
+
+    @include small-screen {
+      &--active {
+        padding: 125px var(--average-offset) 80px;
+      }
     }
   }
 
@@ -22,23 +71,62 @@
     margin: 0 0 0 var(--big-offset);
 
     @include middle-screen {
-      display: none;
+      margin: 0 0 calc(var(--big-offset) * 2);
     }
   }
 
   &__list {
     display: flex;
+
+    @include middle-screen {
+      flex-direction: column;
+    }
   }
 
   &__item {
     &:not(:last-child) {
       margin: 0 var(--middle-offset) 0 0;
+
+      @include middle-screen {
+        margin: 0 0 var(--average-offset);
+      }
+    }
+
+    @include middle-screen {
+      position: relative;
+      border-bottom: 1px solid var(--color-main);
+      padding: 0 0 var(--middle-offset);
+
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        display: block;
+        width: 15px;
+        height: 2px;
+        background-color: var(--color-main);
+      }
+
+      &::before {
+        top: 15px;
+        transform: rotate(45deg);
+      }
+
+      &::after {
+        top: 25px;
+        transform: rotate(-45deg);
+      }
     }
   }
 
   &__link {
     font: var(--font-regular);
     color: var(--color-main);
+
+    @include middle-screen {
+      font-size: 35px;
+    }
   }
 
   &__links {
@@ -47,7 +135,9 @@
     margin: 0 0 0 auto;
 
     @include middle-screen {
-      display: none;
+      flex-direction: column;
+      align-items: flex-start;
+      margin: 0;
     }
   }
 
@@ -57,14 +147,67 @@
 
     &:not(:last-child) {
       margin: 0 var(--small-offset) 0 0;
+
+      @include middle-screen {
+        margin: 0 0 var(--average-offset);
+      }
+    }
+
+    @include middle-screen {
+      position: relative;
+      border-bottom: 1px solid var(--color-main);
+      padding: 0 0 var(--middle-offset);
+      width: 100%;
+      font-size: 35px;
+
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        display: block;
+        width: 15px;
+        height: 2px;
+        background-color: var(--color-main);
+      }
+
+      &::before {
+        top: 15px;
+        transform: rotate(45deg);
+      }
+
+      &::after {
+        top: 25px;
+        transform: rotate(-45deg);
+      }
     }
   }
 
   &__burger {
     @include burger;
 
+    display: none;
+
     @include middle-screen {
+      z-index: 6;
       display: block;
+    }
+  }
+
+  @include middle-screen {
+    position: relative;
+
+    &--active {
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 5;
+        width: 100%;
+        height: 82px;
+        background-color: var(--color-secondary);
+      }
     }
   }
 
