--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,3 +21,12 @@
   font-size: 30px;
   color: var(--color-secondary);
 }
+
+.disable-scroll {
+  position: fixed;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+}
