Немного изменил слайдер, добавил favicon

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -2,30 +2,40 @@
   <div class="carousel__container">
     <div class="swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide carousel__slide">
-          <img src="img/products_1/1.png" alt="Rose Hair &amp;&nbsp;Scalp Moisturising Masque" class="carousel__img">
-          <strong class="carousel__title">Rose Hair &amp;&nbsp;Scalp Moisturising Masque</strong>
-          <p class="carousel__descr">H&auml;lt Kopfhaut und Haar in&nbsp;bestem Zustand</p>
+        <div class="swiper-slide">
+          <a href="#" class="carousel__slide">
+            <img src="img/products_1/1.png" alt="Rose Hair &amp;&nbsp;Scalp Moisturising Masque" class="carousel__img">
+            <strong class="carousel__title">Rose Hair &amp;&nbsp;Scalp Moisturising Masque</strong>
+            <p class="carousel__descr">H&auml;lt Kopfhaut und Haar in&nbsp;bestem Zustand</p>
+          </a>
         </div>
-        <div class="swiper-slide carousel__slide">
-          <img src="img/products_1/2.png" alt="Classic Shampoo" class="carousel__img">
-          <strong class="carousel__title">Classic Shampoo</strong>
-          <p class="carousel__descr">Eine milde, aber dennoch effektive Reinigung</p>
+        <div class="swiper-slide">
+          <a href="#" class="carousel__slide">
+            <img src="img/products_1/2.png" alt="Classic Shampoo" class="carousel__img">
+            <strong class="carousel__title">Classic Shampoo</strong>
+            <p class="carousel__descr">Eine milde, aber dennoch effektive Reinigung</p>
+          </a>
         </div>
-        <div class="swiper-slide carousel__slide">
-          <img src="img/products_1/3.png" alt="Classic Conditioner" class="carousel__img">
-          <strong class="carousel__title">Classic Conditioner</strong>
-          <p class="carousel__descr">Eine leichte, n&auml;hrstoffreiche Pflege</p>
+        <div class="swiper-slide">
+          <a href="#" class="carousel__slide">
+            <img src="img/products_1/3.png" alt="Classic Conditioner" class="carousel__img">
+            <strong class="carousel__title">Classic Conditioner</strong>
+            <p class="carousel__descr">Eine leichte, n&auml;hrstoffreiche Pflege</p>
+          </a>
         </div>
-        <div class="swiper-slide carousel__slide">
-          <img src="img/products_1/3.png" alt="Classic Conditioner" class="carousel__img">
-          <strong class="carousel__title">Classic Conditioner</strong>
-          <p class="carousel__descr">Eine leichte, n&auml;hrstoffreiche Pflege</p>
+        <div class="swiper-slide">
+          <a href="#" class="carousel__slide">
+            <img src="img/products_1/3.png" alt="Classic Conditioner" class="carousel__img">
+            <strong class="carousel__title">Classic Conditioner</strong>
+            <p class="carousel__descr">Eine leichte, n&auml;hrstoffreiche Pflege</p>
+          </a>
         </div>
-        <div class="swiper-slide carousel__slide">
-          <img src="img/products_1/3.png" alt="Classic Conditioner" class="carousel__img">
-          <strong class="carousel__title">Classic Conditioner</strong>
-          <p class="carousel__descr">Eine leichte, n&auml;hrstoffreiche Pflege</p>
+        <div class="swiper-slide">
+          <a href="#" class="carousel__slide">
+            <img src="img/products_1/3.png" alt="Classic Conditioner" class="carousel__img">
+            <strong class="carousel__title">Classic Conditioner</strong>
+            <p class="carousel__descr">Eine leichte, n&auml;hrstoffreiche Pflege</p>
+          </a>
         </div>
       </div>
       <div class="swiper-scrollbar"></div>
