глобальный рефакторинг (под gulp_dr)

--- a/src/partials/demo.html
+++ b/src/partials/demo.html
@@ -1,10 +1,10 @@
 <section class="demo">
   <div class="demo__container">
-    <div class="demo__left"><img src="img/2.png" alt=""></div>
+    <div class="demo__left"><img src="@img/2.png" alt=""></div>
     <div class="demo__right">
       <a href="#" class="demo__link">Schließen</a>
       <div class="demo__wrapper">
-        <img src="img/demo.png" alt="Sculpt Hair Polish" class="demo__img">
+        <img src="@img/demo.png" alt="Sculpt Hair Polish" class="demo__img">
         <div class="demo__inner">
           <strong class="demo__title title">Sculpt Hair Polish</strong>
           <p class="demo__subtitle">Ein Gel, das Pr&auml;zision und Geschmeidigkeit vereint</p>
