--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <div class="header__container">
   <a href="#" class="header__logo">
-    <img src="img/logo.svg" alt="Aesop">
+    <img src="@svg/logo.svg" alt="Aesop">
   </a>
   <div class="header__menu">
     <nav class="header__nav nav">
