--- a/src/partials/preloader.html
+++ b/src/partials/preloader.html
@@ -1,6 +1,6 @@
 <div class="preloader">
   <div class="preloader__container">
-    <img src="img/logo.svg" alt="Aesop." class="preloader__logo">
+    <img src="@svg/logo.svg" alt="Aesop." class="preloader__logo">
     <div class="preloader__progress"></div>
     <p class="preloader__percent">1%</p>
   </div>
