--- a/src/scss/components/_demo.scss
+++ b/src/scss/components/_demo.scss
@@ -1,5 +1,3 @@
-@import "../mixins";
-
 .demo {
   &__container {
     display: flex;
@@ -14,7 +12,7 @@
       height: 100%;
     }
 
-    @include large-screen {
+    @include tablet {
       display: none;
     }
   }
@@ -26,7 +24,7 @@
     width: 50%;
     background-color: var(--color-swirl);
 
-    @include large-screen {
+    @include tablet {
       width: 100vw;
     }
   }
@@ -67,7 +65,7 @@
     margin: auto 0;
     padding: var(--big-offset) 0 0;
 
-    @include small-screen {
+    @include mobile {
       flex-direction: column;
     }
   }
@@ -77,7 +75,7 @@
     width: 200px;
     height: 230px;
 
-    @include small-screen {
+    @include mobile {
       margin: 0;
       width: auto;
       height: auto;
@@ -85,7 +83,7 @@
   }
 
   &__inner {
-    @include small-screen {
+    @include mobile {
       display: flex;
       flex-direction: column;
       align-items: center;
