--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,3 @@
-@import "../mixins";
-
 .header {
   padding: var(--average-offset) 50px;
 
@@ -7,7 +5,7 @@
     display: flex;
     align-items: center;
 
-    @include middle-screen {
+    @include small-tablet {
       justify-content: space-between;
 
       // &--active {
@@ -15,7 +13,7 @@
       // }
     }
 
-    // @include small-screen {
+    // @include mobile {
     //   &--active {
     //     padding: var(--average-offset);
     //   }
@@ -35,7 +33,7 @@
     justify-content: space-between;
     width: 100%;
 
-    @include middle-screen {
+    @include small-tablet {
       position: absolute;
       left: 0;
       top: 0;
@@ -60,7 +58,7 @@
       }
     }
 
-    @include small-screen {
+    @include mobile {
       &--active {
         padding: 125px var(--average-offset) 80px;
       }
@@ -70,7 +68,7 @@
   &__nav {
     margin: 0 0 0 var(--big-offset);
 
-    @include middle-screen {
+    @include small-tablet {
       margin: 0 0 calc(var(--big-offset) * 2);
     }
   }
@@ -78,7 +76,7 @@
   &__list {
     display: flex;
 
-    @include middle-screen {
+    @include small-tablet {
       flex-direction: column;
     }
   }
@@ -87,12 +85,12 @@
     &:not(:last-child) {
       margin: 0 var(--middle-offset) 0 0;
 
-      @include middle-screen {
+      @include small-tablet {
         margin: 0 0 var(--average-offset);
       }
     }
 
-    @include middle-screen {
+    @include small-tablet {
       position: relative;
       border-bottom: 1px solid var(--color-main);
       padding: 0 0 var(--middle-offset);
@@ -124,7 +122,7 @@
     font: var(--font-regular);
     color: var(--color-main);
 
-    @include middle-screen {
+    @include small-tablet {
       font-size: 35px;
     }
   }
@@ -134,7 +132,7 @@
     align-items: center;
     margin: 0 0 0 auto;
 
-    @include middle-screen {
+    @include small-tablet {
       flex-direction: column;
       align-items: flex-start;
       margin: 0;
@@ -148,12 +146,12 @@
     &:not(:last-child) {
       margin: 0 var(--small-offset) 0 0;
 
-      @include middle-screen {
+      @include small-tablet {
         margin: 0 0 var(--average-offset);
       }
     }
 
-    @include middle-screen {
+    @include small-tablet {
       position: relative;
       border-bottom: 1px solid var(--color-main);
       padding: 0 0 var(--middle-offset);
@@ -185,16 +183,15 @@
 
   &__burger {
     @include burger;
-
     display: none;
 
-    @include middle-screen {
+    @include small-tablet {
       z-index: 6;
       display: block;
     }
   }
 
-  @include middle-screen {
+  @include small-tablet {
     position: relative;
 
     &--active {
@@ -211,7 +208,7 @@
     }
   }
 
-  @include small-screen {
+  @include mobile {
     padding: var(--average-offset);
   }
 }
