--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,10 +1,8 @@
-@import "../mixins";
-
-.main {
+.hero {
   position: relative;
 
   &::before {
-    @include middle-screen {
+    @include small-tablet {
       content: "";
       position: absolute;
       left: 0;
@@ -28,10 +26,10 @@
     width: 100%;
     height: 100%;
     background-image: url("../img/1.png");
-    background-size: 100% 100%;
+    background-size: 100%;
     background-repeat: no-repeat;
 
-    @include xlarge-screen {
+    @include big-desktop {
       background-position: 90% 0;
       background-size: cover;
     }
@@ -43,20 +41,20 @@
     padding: 240px 0 100px 150px;
     max-width: 600px;
 
-    @include xlarge-screen {
+    @include big-desktop {
       padding: 240px 0 100px 100px;
     }
 
-    @include large-screen {
+    @include tablet {
       padding: 100px 0 100px 50px;
       max-width: 400px;
     }
 
-    @include middle-screen {
+    @include small-tablet {
       padding: 100px 0 200px 50px;
     }
 
-    @include small-screen {
+    @include mobile {
       padding: 100px 25px 200px;
     }
   }
