--- a/src/scss/components/_info.scss
+++ b/src/scss/components/_info.scss
@@ -1,11 +1,9 @@
-@import "../mixins";
-
 .info {
   &__container {
     display: flex;
     align-items: center;
 
-    @include xlarge-screen {
+    @include big-desktop {
       flex-direction: column;
       align-items: unset;
     }
@@ -15,11 +13,11 @@
     padding: calc(var(--big-offset) * 2);
     width: 40%;
 
-    @include xlarge-screen {
+    @include big-desktop {
       width: auto;
     }
 
-    @include small-screen {
+    @include mobile {
       padding: var(--average-offset);
     }
   }
@@ -32,7 +30,7 @@
       width: 100%;
     }
 
-    @include xlarge-screen {
+    @include big-desktop {
       width: auto;
     }
   }
@@ -51,7 +49,7 @@
       font-size: 16px;
     }
 
-    @include xlarge-screen {
+    @include big-desktop {
       max-width: 600px;
     }
   }
