--- a/src/scss/components/_notice.scss
+++ b/src/scss/components/_notice.scss
@@ -1,5 +1,3 @@
-@import "../mixins";
-
 .notice {
   display: flex;
   align-items: center;
@@ -32,7 +30,7 @@
       visibility: visible;
       transition: opacity 0.15s ease-in-out, visibility 0.15s ease-in-out;
 
-      @include xlarge-screen {
+      @include big-desktop {
         display: none;
       }
     }
@@ -44,7 +42,7 @@
       }
     }
 
-    @include xlarge-screen {
+    @include big-desktop {
       margin: 0;
       border-bottom: 1px solid var(--color-main);
     }
@@ -67,7 +65,7 @@
     background-color: var(--color-secondary);
   }
 
-  @include middle-screen {
+  @include small-tablet {
     justify-content: space-between;
   }
 }
