--- a/src/scss/mixins/_breakpoint.scss
+++ b/src/scss/mixins/_breakpoint.scss
@@ -1,22 +1,30 @@
-@mixin xlarge-screen {
+/* stylelint-disable */
+
+@mixin for-desktop {
+  @media (min-width: (1025px)) {
+    @content;
+  }
+}
+
+@mixin big-desktop {
   @media (max-width: (1200px)) {
     @content;
   }
 }
 
-@mixin large-screen {
+@mixin tablet {
   @media (max-width: (992px)) {
     @content;
   }
 }
 
-@mixin middle-screen {
+@mixin small-tablet {
   @media (max-width: (768px)) {
     @content;
   }
 }
 
-@mixin small-screen {
+@mixin mobile {
   @media (max-width: (576px)) {
     @content;
   }
